fix: updated backup strategy to use jdbc directly